# jlab-standard-chroma-build

./: README  bgl_build.sh  bgp_build.sh  build-git.sh.in  build.sh  build.sh.in  build_bagel.sh  build_chroma_kernel_k2.6.sh  build_kernel_2.4.sh  build_kernel_2.6.sh  build_qcdi03.sh  build_qdp.sh  build_single.sh  clean.sh  config_nightly.csh  configure  configure.ac  functions.sh  link  nightly-double.csh  nightly-full-7n.csh  nightly-full-9q.csh  nightly-gcc4.csh  nightly-intel.csh  nightly-partial-4g.csh  nightly-partial-6n.csh  nightly-partial-9q.csh  nightly.csh  nightly_7n.csh  output  ranger_build.sh  scalar.sh  tagged-4g.csh  tagged-7n.csh  tagged.csh  tagged_7n.csh  tagged_chroma.csh  xt-pat-build.sh  xt3_build.sh
adat/: PREFIX.in
bagel/: PREFIX.in  VERSION.in
bagel_clover/: PREFIX.in  VERSION.in
bagel_qdp/: PREFIX.in  VERSION.in
bagel_wilson_dslash/: PREFIX.in  VERSION.in
chroma/: PREFIX  PREFIX.in  VERSION  VERSION.in
chroma/gigE/: makemake.sh
chroma/single/: makemake.sh
colorvec/: PREFIX.in  VERSION.in
gmp/: PREFIX.in  VERSION.in
hadron/: PREFIX.in  VERSION.in
libxml2/: PREFIX.in  VERSION.in
qdp++/: PREFIX  VERSION  makemake.sh
qdpxx/: PREFIX.in  VERSION.in  makemake.sh
qmp/: PREFIX  PREFIX.in  VERSION  VERSION.in  makemake.sh
qmp-mvia-mesh/: PREFIX  PREFIX.in  VERSION  VERSION.in
qmp/gm/gm/: makemake.sh
qmp/single/: makemake.sh
qmt/: PREFIX.in  VERSION.in
redstar/: PREFIX.in  VERSION.in
sfpcac/: PREFIX.in  VERSION.in
tensor/: PREFIX.in  VERSION.in
